Заставил работать рекурсиную загрузку файловой структуры

--- a/TreeSize.App/TreeSize.App/TreeSize.App.csproj
+++ b/TreeSize.App/TreeSize.App/TreeSize.App.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\TreeSize.Core\TreeSize.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
+
 </Project>
