--- a/TreeSize.App/TreeSize.App/TreeSize.App.csproj
+++ b/TreeSize.App/TreeSize.App/TreeSize.App.csproj
@@ -8,11 +8,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\file.png" />
+    <None Remove="Images\folder.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ObjectListView.Official" Version="2.9.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TreeSize.Core\TreeSize.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Images\" />
+    <Resource Include="Images\file.png" />
+    <Resource Include="Images\folder.png" />
   </ItemGroup>
 
 </Project>
